docs/1.23/core/v1/nodeCondition.md
---
permalink: /1.23/core/v1/nodeCondition/
---

# core.v1.nodeCondition

"NodeCondition contains condition information for a node."

## Index

* [`fn withLastHeartbeatTime(lastHeartbeatTime)`](#fn-withlastheartbeattime)
* [`fn withLastTransitionTime(lastTransitionTime)`](#fn-withlasttransitiontime)
* [`fn withMessage(message)`](#fn-withmessage)
* [`fn withReason(reason)`](#fn-withreason)
* [`fn withType(type)`](#fn-withtype)

## Fields

### fn withLastHeartbeatTime

```ts
withLastHeartbeatTime(lastHeartbeatTime)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn withLastTransitionTime

```ts
withLastTransitionTime(lastTransitionTime)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn withMessage

```ts
withMessage(message)
```

"Human readable message indicating details about last transition."

### fn withReason

```ts
withReason(reason)
```

"(brief) reason for the condition's last transition."

### fn withType

```ts
withType(type)
```

"Type of node condition.\n\nPossible enum values:\n - `\"DiskPressure\"` means the kubelet is under pressure due to insufficient available disk.\n - `\"MemoryPressure\"` means the kubelet is under pressure due to insufficient available memory.\n - `\"NetworkUnavailable\"` means that network for the node is not correctly configured.\n - `\"PIDPressure\"` means the kubelet is under pressure due to insufficient available PID.\n - `\"Ready\"` means kubelet is healthy and ready to accept pods."